src/Weather.css
.Weather {
  font-family: arial, sans-serif;
  border: 1px solid #dadde1;
  padding: 16px;
  border-radius: 4px;
  color: rgb(135, 135, 135);
}

.Weather form {
  margin-bottom: 20px;
}

.Weather h1 {
  color: #878787;
  font-size: 24px;
  font-weight: 100;
  margin: 20px 0 0 0;
  line-height: 29px;
}

.Weather ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.Weather li {
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
}

.Weather canvas {
  height: 60px;
  width: 60px;
  margin-top: 20px;
  display: inline-block;
}

.Weather .temperature {
  font-weight: bold;
  color: rgb(33, 33, 33);
  font-size: 64px;
  font-weight: 400;
  margin-left: 20px;
}

.Weather .unit {
  color: rgb(33, 33, 33);
  font-size: 16px;
  position: relative;
  top: -34px;
}

